--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.16",
+    "@types/streamifier": "^0.1.2",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.1",
@@ -40,6 +41,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "chalk": "^5.6.2",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
@@ -55,6 +57,7 @@
     "nodemailer": "^7.0.11",
     "npm": "^11.7.0",
     "socket.io": "^4.7.5",
+    "streamifier": "^0.1.1",
     "stripe": "^17.6.0",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
